# Qt-CMake-HelloWorld

./: CMakeLists.txt  main.cpp
